fixed css from imgContainer, because it was static and too big for mobile

--- a/src/components/dropzone/index.css
+++ b/src/components/dropzone/index.css
@@ -1,5 +1,5 @@
 .imgContainer {
-    max-width: 400px;
-    max-height: 400px;
+    max-width: 100%;
+    max-height: 100%;
     margin: 0 auto;
 }
